2012-06-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/auth/ldap.php, include/javascript/pandora.js,
	include/functions_incidents.php: cleaned source code style.
	
	* include/functions_users.php, operation/users/webchat.php: a lot of
	fixes, the "error connection" don't appear when timeout the
	connection for to get new messages, fixed empty messages, and
	fixed when make freak actions with user connect in webchat for
	example delete. And the most important the chat files (logs and
	others) now Pandora save this files in attachment dir instead the
	tmp system dir.
	
	* godmode/users/user_list.php: added to call to delete from the
	chat user list when delete a user.

2012-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Cleaning the mess when 
	update setup fields. Now, looking the $sec2, only
	will be updated the fields of the current setup section
	In this way, set fields as empty value has been
	fixed

2012-06-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/functions_fsgraph.php
	 include/graphs/fgraph.php: Added variable font size in flash 
	 charts.
	 
	 godmode/agentes/module_manager_editor_common.php: Modified width
	 of module type select in module editor when you are 
	 editing/creating a network module.
	 
    * include/functions_html.php 
     godmode/reporting/reporting_builder.list_items.php: Fixed broken 
    view due to a bad sintax statement.

2012-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Fixed a problem with 
	ACL IP List and API password values on setup that 
	be erased when update another setup section (in example 
	visual styles). This problem appeared when we try to 
	fix the empty setting of these fields.

2012-06-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/graphs/functions_fsgraph.php
	 include/graphs/fgraph.php
	 include/functions_config.php
	 include/functions_ui.php
	 include/functions.php